--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
-<head>
-<title>Bhaskar Mahto</title>
-</head>
-<body>
-<h2>Hello World!</h2>
-</body>
+  <head>
+      <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet"> 
+      <link rel="stylesheet" href="style.css">
+    <title>Bhaskar Mahto</title>
+  </head>
+  <body>
+    <h2>Bhaskar Mahto</h2>
+  </body>
 </html>
