--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Bhaskar Mahto</title>
   </head>
   <body>
-    <h2>Bhaskar Mahto</h2>
+    <h1 align="center">Bhaskar Mahto</h1>
+    <p align="center">site en route to destination.</p>
   </body>
 </html>
