--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Bhaskar Mahto</title>
   </head>
   <body>
-    <h1>Bhaskar Mahto</h1>
+    <h1 class="heading">Bhaskar Mahto</h1>
     <p>site en route to destination.</p>
   </body>
 </html>
