--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
       <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet"> 
       <link rel="stylesheet" href="style.css">
-    <title>Bhaskar Mahto</title>
+    <title>भास्कर महतो</title>
   </head>
   <body>
-    <h1 class="heading">Bhaskar Mahto</h1>
-    <p>site en route to destination.</p>
+      <div class="main">
+        <span class="heading">भास्कर महतो</span>
+        <p>site en route to destination.</p>
+      </div>
   </body>
 </html>
+
