--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <div class="main">
-        <span class="heading">भास्कर महतो</span>
+        <h1>भास्कर महतो</h1>
         <p>site en route to destination.</p>
       </div>
   </body>
