--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet"> 
       <link rel="stylesheet" href="style.css">
-    <title>भास्कर महतो</title>
+    <title>Bhaskar Mahto</title>
   </head>
   <body>
       <div class="main">
