--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <div class="main">
-        <h1 class="name-logo">भास्कर महतो</h1>
+        <div class="name-logo"><b><span>भा</span>स्<span>क</span>र <span>म</span>ह<span>तो</span></b></div>
         <p>site en route to destination.</p>
       </div>
   </body>
