--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
       <div class="main">
         <div class="logo"><b><span>भा</span>स्<span>क</span>र <span>म</span>ह<span>तो</span></b></div>
+        <div class="logo"><b>d<span>ri</span>bb<span>b</span>le</b></div>
         <p>site en route to destination.</p>
       </div>
   </body>
