--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
       <div class="main">
         <div class="logo">
-          <h1><b><span>भा</span>स्<span>क</span>र <span>म</span>ह<span>तो</span></b></h1>
+          <h1><b><span>भा</span><span>स्क</span>र <span>म</span>ह<span>तो</span></b></h1>
         </div>
         <p>site en route to destination.</p>
       </div>
